// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<button
  className="sc-htpNat cjGpWE"
>
  Test
</button>
`;

exports[`Button renders disabled 1`] = `
<button
  className="sc-htpNat ldQCWT"
  disabled={true}
>
  Test
</button>
`;

exports[`Button renders href 1`] = `
<a
  className="sc-bwzfXH hNPJOC"
  href="https://ivesvh.com"
>
  Test
</a>
`;

exports[`Button renders onClick 1`] = `
<button
  className="sc-htpNat cjGpWE"
  onClick={[Function]}
>
  Test
</button>
`;

exports[`Button renders properties 1`] = `
<button
  className="sc-htpNat dLXHcl"
>
  Test
</button>
`;

exports[`Button renders secondary 1`] = `
<button
  className="sc-htpNat fQZceC"
>
  Test
</button>
`;

exports[`Button renders to 1`] = `
<a
  className="sc-bdVaJa fOwSJR"
  href="https://ivesvh.com"
  onClick={[Function]}
>
  Test
</a>
`;
